--- a/styles/views/_signIn.scss
+++ b/styles/views/_signIn.scss
@@ -1,5 +1,5 @@
 .grid-container-sign{
-    background-image: url("/images/main-sign__info--img2.jpg");
+    background-image: url("/images/mainMountain.jpg");
     background-size: cover;
     background-position: 50% 50%;
     .header-Sign {
@@ -23,7 +23,7 @@
         height: 92vh;
         &__info {
             display: none;
-            background-image: url("/images/main-sign__info--img2.jpg");
+            background-image: url("/images/mainMountain.jpg");
             background-size: cover;
             background-position: 50% 50%;
             height: 100%;
