--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     text-decoration: none;
-    color: #00008B;
+    color: #f6d794;
     font-family: "Lato", sans-serif;
     font-size: 13px;
     box-sizing: border-box;
