--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,41 +4,104 @@
 @import './views/inicio';
 @import './utilities/variables';
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 550px) {
     // INICIO
     .grid-container-inicio{
-        background-image: url("/images/inicio.jpg");
+        background-image: url("/images/editedBG.png");
         background-size:cover;
-        background-position: 100% 45%;
-        .header-inicio{
-            &__ul{
-                width: 25vw;
-            }
-        }
-        .main-inicio{
+        background-position: 70% 80%;
+        grid-template-rows: 10vh 100vh;
+        .main-inicio-first{
+            height: 90vh;
+            grid-template-rows: 55% 20%;
+            padding: 0 7vw;
             &__title{
-                .h1{
-                    font-size: 3rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: end;
+                &--h1{
+                    font-size: 2.5rem;
+                    width: 25vw;
+                }
+                &--description{
+                    width: 35vw;
                 }
             }
-            &__options{
-                .main-inicio__boxes{
-                    grid-template-columns: repeat(3, 1fr);
-                    .main-inicio__box{
-                        width: 24vw;
-                        height: 13vh;
-                        font-size: 1.5rem;
-                        &--health{
-                            display: grid;
-                        }
-                        p{
-                            font-size: 1.3rem;
-                        }
-                    }
-                }             
+            &__action{
+                justify-content: start;
+            }
+            &__image{
+                display: none;
             }
         }
     }
+    .main-inicio-second{
+        display: block;
+        height: 100vh;
+        background: linear-gradient(90deg, #e9f0ec 50%, #fdd9ab 75%, #e9cea9 93%,#f7dab0);
+        &__options {
+            display: grid;
+            grid-template-columns: 1fr 7.5fr 1fr;
+            height: 30vh;
+            .main-inicio-second__boxes {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                text-align: center;
+                .main-inicio-second__box {
+                    width: 24vw;
+                    height: 13vh;
+                    font-size: 1.5rem;
+                    margin: auto;
+                    font-weight: 600;
+                    border: #3a4b51  1.5px solid;
+                    border-radius: 8px;
+                    background-color: #0b0f15;
+                    display: grid;
+                    &:hover {
+                        background-color: #ffd2d241;
+                        scale: 1.01;
+                    }
+                    p {
+                        align-self: center;
+                        font-size: 1.3rem;                    
+                    }
+                }
+            }
+            .main-inicio-second__arrow {
+                margin: auto;
+                &--btn {
+                    height: 5vh;
+                    width: 4vw;
+                    border: none;
+                    background-color: transparent;
+                    background-size: cover;
+                    background-position: center;
+                    &:hover {
+                        scale: 1.05;
+                    }
+                }
+                &--btn1 {
+                    background-image: url("/images/back_arrow_5821.png");
+                }
+                
+                &--btn2 {
+                    background-image: url("/images/forwardarrow_haciaadelante_4836.png");
+                }
+            }
+        }
+        .main-inicio-second__options{
+            .main-inicio-second__boxes{
+                .main-inicio-second__box{
+                    
+                    &--health{
+                        display: grid;
+                    }
+                    
+                }
+            }             
+        }
+    }
+
     // SIGN IN
     .grid-container-sign{
         background-color: #ffffff;
@@ -65,7 +128,8 @@
 @media only screen and (min-width: 1024px) {
     // INICIO
     .grid-container-inicio{
-        grid-template-rows: 10vh 90vh;
+        background-position: 10% 100%;
+        grid-template-rows: 10vh 100vh;
         .header-inicio{
             &__ul{
                 a{
@@ -75,10 +139,13 @@
                 height: 10vh;
             }
         }
-        .main-inicio{
+        .main-inicio-first{
             &__title{
-                .h1{
-                    font-size: 3.5rem;
+                &--h1{
+                    font-size: 3.8rem;
+                }
+                &--description{
+                    font-size: 1.3rem;
                 }
             }
             &__options{
@@ -93,9 +160,12 @@
                     }
                 }             
             }
-            &__start {
-                p{
-                    font-size: 3rem;
+            &__action{
+                &--container{
+                    padding: 2vh 2vw;
+                    p{
+                        font-size: 1.6rem;
+                    }
                 }
             }
         }
@@ -104,7 +174,7 @@
     .grid-container-sign{
         .main-Sign__info {
             .main-Sign__text{
-                width: 65%;
+                width: 55%;
                 .main-Sign__square{
                     h1{
                         font-size: 2rem;
@@ -117,4 +187,8 @@
             
         }
     }
+}
+@media only screen and (min-width: 1440px) {
+    // INICIO
+
 }
