--- a/styles/views/_inicio.scss
+++ b/styles/views/_inicio.scss
@@ -1,106 +1,104 @@
 .grid-container-inicio {
     display: grid;
-    grid-template-rows: 8vh 92vh;
-    background-image: url("/images/inicio--img.jpg");
-    height: 100vh;
-    background-size: cover;
-    background-position: 100%;
+    grid-template-rows: 10vh 90vh;
+    background: linear-gradient(230deg, #fc9e4e, #1d0e140d 30.71%),            
+                linear-gradient(165deg, #1d0e14, #1d0e143f 25%, rgba(0,255,0,0) 40.71%),
+                linear-gradient(50deg, #3a4b51 20%, rgba(0,255,0,0) 60.71%),            
+                linear-gradient(336deg, #faf3e8 5%,#fb8042 40.71%, #fbc157);            
+                    
     .header-inicio {
-        display: flex;
-        justify-content: flex-end;
-        &__ul {
+        // display: flex;
+        &__container{
             display: flex;
-            width: 35vw;
-            height: 8vh;
-            justify-content: space-evenly;
+            justify-content: space-between;
             align-items: center;
-            li {
-                display: inline-block;
-                &:hover {
-                    color: rgba(0, 0, 0, 0.302);
-                    scale: 1.1;
+            margin: 0 4vw;
+            &--logo{
+                p{
+                    font-size: 1.2rem;
+                }
+            }
+            &--ul {
+                display: flex;
+                // width: 35vw;
+                height: 8vh;
+                justify-content: space-evenly;
+                align-items: center;
+                li {
+                    display: flex;
+                    background-color: #1d0e14d1;
+                    height: 5vh;
+                    width: 12vw;
+                    padding: 0.6vh 1.2vw;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 4px;
+                    a{
+                        font-size: 0.8rem;
+                        
+                    }
+                    &:hover {
+                        color: rgba(0, 0, 0, 0.302);
+                        scale: 1.1;
+                    }
                 }
             }
         }
     }
-    .main-inicio {
+    .main-inicio-first {
         display: grid;
-        grid-template-rows: 50% 30% 20%;
+        height: 100%;
+        grid-template-rows: 35% 10% 55%;
+        margin: 0 5vw;
         &__title {
-            text-align: center;
-            margin: auto;
-            .h1 {
-                margin-top: 10vh;
-                font-size: 2.4rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            &--h1 {
+                margin-top: 3vh;
+                font-size: 2.5rem;
                 font-weight: 800;
             }
-        }
-        &__options {
-            display: grid;
-            grid-template-columns: 1fr 7.5fr 1fr;
-            .main-inicio__boxes {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                text-align: center;
-                .main-inicio__box {
-                    margin: auto;
-                    font-weight: 600;
-                    border: #ffd2d270 1.5px solid;
-                    border-radius: 8px;
-                    width: 34vw;
-                    height: 10vh;
-                    background-color: #ffd2d230;
-                    display: grid;
-                    &:hover {
-                        background-color: #ffd2d241;
-                        scale: 1.01;
-                    }
-                    &--health{
-                        display: none;
-                    }
-                    p {
-                        align-self: center;
-                        text-shadow: 1px 1px 1px #ffd2d2, -1px -1px 2px #ffd2d2
-                    }
-                }
+            &--description{
+                margin-top: 2vh;
             }
-            .main-inicio__arrow {
-                margin: auto;
-                &--btn {
-                    height: 5vh;
-                    width: 4vw;
-                    border: none;
-                    background-color: transparent;
-                    background-size: cover;
-                    background-position: center;
-                    &:hover {
-                        scale: 1.05;
-                    }
-                }
-                .main-inicio__arrow--btn1 {
-                    background-image: url("/images/back_arrow_5821.png");
-                }
-                
-                .main-inicio__arrow--btn2 {
-                    background-image: url("/images/forwardarrow_haciaadelante_4836.png");
+        }
+        &__action{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &--container{
+                background-color: #f9a956;
+                padding: 1vh 1vw;
+                border-radius: 4px;
+                p{
+                    color: white;
                 }
             }
         }
-        &__start {
-            text-align: center;
-            font-weight: 600;
-            p {
-                display: inline-block;
-                text-shadow: 1px 1px 1px #ffd2d2;
-                font-size: 2.2rem;
-                &:hover {
-                    color: #00008bce;
-                    scale: 1.1;
-                }
+        &__image{
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &--container{
+                height: 80%;
+            }
+            &--img{
+                max-width: 100%;
+                max-height: 100%;
+                background-size: cover;
+                border-radius: 10px;
             }
         }
     }
 }
+.main-inicio-second{
+    display: none;
+}
+
 
 /* HOW TO AFFECT A PARENT HOVERING A CHILD? */
 // .containerBox:hover>.gridContainer {
