--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@
 }
 .grid-container-sign .header-Sign {
   height: 8vh;
-  border-bottom: #ffd2d2 solid 1px;
 }
 .grid-container-sign .header-Sign nav {
   height: 100%;
@@ -35,10 +34,11 @@
 }
 .grid-container-sign .main-Sign__info {
   display: none;
-  background-image: url("/images/mainMountain.jpg");
+  background-image: url("/images/mainMountain1.png");
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 50% 10%;
   height: 100%;
+  border-radius: 0 5px 0 0;
 }
 .grid-container-sign .main-Sign__info .main-Sign__text {
   margin: auto;
@@ -61,12 +61,16 @@
   font-size: 1.8rem;
   color: rgba(0, 0, 139, 0.8352941176);
 }
+.grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square h1 i {
+  color: #00008b;
+}
 .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square h1 strong {
   font-size: 1.8rem;
   color: #00008b;
 }
 .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square p {
   margin-bottom: 5vh;
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container {
   display: flex;
@@ -79,31 +83,54 @@
   margin: auto;
   width: 75vw;
   height: 75vh;
-  /* background-color: ; */
   display: flex;
   flex-direction: column;
-  padding: 8vh 4vw 4vh 2vw;
+  padding: 4vh 4vw 4vh 2vw;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form--h2 {
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form--description {
+  color: #00008b;
   margin: 2vh 0;
   font-size: 0.85em;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__label {
-  margin: 1vh 0.5vw;
+  margin: 1vh 0vw;
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input {
-  border: 1px solid #ffd2d2;
-  /* #87CEEB; */
+  border: none;
+  border-bottom: 2px solid #f6d794;
   border-radius: 3px;
   margin: 1vh 0;
   padding: 1vh 0;
   background-color: transparent;
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input:focus {
   outline: none;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input:hover {
-  background-color: rgba(255, 210, 210, 0.137254902);
+  background-color: rgba(246, 215, 148, 0.3411764706);
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign--btn {
+  width: 100%;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__password--container {
+  border-bottom: 2px solid #f6d794;
+  margin: 1vh 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__password--container .main-Sign__input--password {
+  border: none;
+  margin: 0;
+  width: 90%;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__password--container #show-password {
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__help {
   display: flex;
@@ -112,6 +139,7 @@
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__help p {
   font-size: 0.7em;
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor {
   display: flex;
@@ -123,12 +151,16 @@
   width: 30%;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor-side hr {
-  background-color: #ffd2d2;
+  background-color: #f6d794;
   border: none;
-  height: 1px;
+  height: 2px;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor p {
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account {
   margin: auto;
+  color: #00008b;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account:hover {
   color: rgba(0, 0, 139, 0.8352941176);
@@ -141,26 +173,31 @@
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__social-media i {
   width: 1vw;
+  color: #00008b;
 }
 
 .grid-container-home {
   display: grid;
   grid-template-rows: 9.5vh 100vh 30vh;
+  background-color: #e9f0ec;
 }
 .grid-container-home .header-home {
   display: grid;
   grid-template-columns: 35% 45% 20%;
   position: sticky;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.9803921569);
 }
 .grid-container-home .header-home__start {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
+.grid-container-home .header-home__start--menu i {
+  color: #00008b;
+}
 .grid-container-home .header-home__start--brand a {
   font-size: 1.5rem;
+  color: #00008b;
 }
 .grid-container-home .header-home__center {
   display: flex;
@@ -169,7 +206,7 @@
 }
 .grid-container-home .header-home__center .header-home__search {
   background-color: transparent;
-  border: 1px solid #ffd2d2;
+  border: 1px solid #f6d794;
   border-radius: 14px;
   width: 40vw;
   height: 5vh;
@@ -243,7 +280,7 @@
   border-radius: 4px;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li:hover {
-  background-color: rgba(255, 210, 210, 0.5607843137);
+  background-color: #f6d794;
   cursor: pointer;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li a {
@@ -254,6 +291,7 @@
   height: 1.6rem;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li p {
+  color: #00008b;
   font-size: 0.75rem;
   text-align: center;
 }
@@ -266,19 +304,21 @@
   align-items: center;
   position: fixed;
   margin-left: 8vw;
-  background-color: rgba(255, 255, 255, 0.9803921569);
 }
 .grid-container-home .container-home .bar-home__btn {
   padding: 0.5rem 1rem;
   margin: 1vh 1vw;
   border: none;
-  background-color: rgba(255, 210, 210, 0.5607843137);
+  background-color: #f6d794;
   border-radius: 6px;
 }
+.grid-container-home .container-home .bar-home__btn--text {
+  color: #00008b;
+}
 .grid-container-home .container-home .bar-home__btn:hover {
-  background-color: rgba(255, 177, 177, 0.7019607843);
+  background-color: #ffdb8c;
   cursor: pointer;
-  border-bottom: solid 1px rgba(217, 154, 154, 0.7019607843);
+  border-bottom: solid 1px #ffdb8c;
 }
 .grid-container-home .container-home .bar-home__btn .selected {
   background-color: #4070F4;
@@ -426,16 +466,72 @@
   background-color: #265DF2;
 }
 
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input option {
+  color: #00008b;
+  background-color: rgba(246, 215, 148, 0.5098039216);
+  border: none;
+}
+
+.grid-container-home .container-home {
+  display: grid;
+  grid-template-areas: "aside main";
+}
+.grid-container-home .container-home .main-tools {
+  grid-area: main;
+  width: 88.3vw;
+  position: relative;
+  margin-left: 8vw;
+  margin-top: 2vh;
+  overflow: hidden;
+}
+.grid-container-home .container-home .main-tools__favorite--h1 {
+  font-size: 1.5rem;
+  color: #00008b;
+  margin-bottom: 2vh;
+}
+.grid-container-home .container-home .main-tools__favorite--chosen {
+  display: flex;
+  height: 26vh;
+  border: #00008b 1px solid;
+  border-radius: 4px;
+}
+.grid-container-home .container-home .main-tools__extensions--h2 {
+  font-size: 1.5rem;
+  color: #00008b;
+  margin-top: 2vh;
+}
+.grid-container-home .container-home .main-tools__extensions .main-tools__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.grid-container-home .container-home .main-tools__extensions .main-tools__container--extension {
+  margin: 3vh 2vw;
+  border-radius: 7px;
+}
+.grid-container-home .container-home .main-tools__extensions .main-tools__container--extension .main-tools__container--title {
+  text-align: center;
+  color: #00008b;
+}
+.grid-container-home .container-home .main-tools__extensions .main-tools__container--extension:hover {
+  background-color: #f6d794;
+}
+
 .grid-container-inicio {
   display: grid;
   grid-template-rows: 10vh 90vh;
-  background: linear-gradient(230deg, #fc9e4e, rgba(29, 14, 20, 0.0509803922) 30.71%), linear-gradient(165deg, #1d0e14, rgba(29, 14, 20, 0.2470588235) 25%, rgba(0, 255, 0, 0) 40.71%), linear-gradient(50deg, #3a4b51 20%, rgba(0, 255, 0, 0) 60.71%), linear-gradient(336deg, #faf3e8 5%, #fb8042 40.71%, #fbc157);
+  background-image: url("/images/inicioBackground.png");
+  background-size: cover;
+  background-position: 50% 80%;
+}
+.grid-container-inicio .header-inicio nav {
+  height: 100%;
 }
 .grid-container-inicio .header-inicio__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 4vw;
+  height: 100%;
 }
 .grid-container-inicio .header-inicio__container--logo p {
   font-size: 1.2rem;
@@ -466,21 +562,23 @@
 .grid-container-inicio .main-inicio-first {
   display: grid;
   height: 100%;
-  grid-template-rows: 35% 10% 55%;
+  grid-template-rows: 73% 12%;
   margin: 0 5vw;
 }
 .grid-container-inicio .main-inicio-first__title {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
 }
 .grid-container-inicio .main-inicio-first__title--h1 {
   margin-top: 3vh;
   font-size: 2.5rem;
   font-weight: 800;
+  text-align: center;
 }
 .grid-container-inicio .main-inicio-first__title--description {
   margin-top: 2vh;
+  display: none;
 }
 .grid-container-inicio .main-inicio-first__action {
   display: flex;
@@ -518,6 +616,90 @@
 }
 
 /* HOW TO AFFECT A PARENT HOVERING A CHILD? */
+.container {
+  background-color: #00325b;
+  margin: 5vh 20vw;
+}
+
+.paso {
+  padding: 2vh 2vw;
+  background-color: #218383;
+  color: white;
+}
+
+.pasoInput {
+  padding: 3.5vh 2.5vw;
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+}
+
+.divisor {
+  border-top: white solid 1px;
+}
+
+.title {
+  flex-basis: 80%;
+  font-weight: 1000;
+  padding-bottom: 2vh;
+}
+
+.input {
+  border: none;
+  flex-basis: 20%;
+  max-width: 20%;
+  padding: 5px;
+}
+
+.input:focus-visible {
+  outline: none;
+}
+
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.input::-moz-placeholder {
+  text-align: center;
+  color: black;
+}
+
+.input::placeholder {
+  text-align: center;
+  color: black;
+}
+
+p {
+  font-size: 0.75em;
+  flex-basis: 80%;
+  max-width: 70%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button {
+  border: none;
+  flex-basis: 10%;
+  margin: 1.5vh 0 2vh 2vw;
+  padding: 0.75em;
+  font-size: 1em;
+  font-weight: 900;
+  color: white;
+}
+
+.calcular {
+  background-color: green;
+}
+
+.reset {
+  background-color: red;
+}
+
 /* COLORES (AZUL PROFUNDO, ROSA PASTEL, BLANCO)
 #00008B
 #65bcde80
@@ -526,10 +708,9 @@
  */
 @media only screen and (min-width: 550px) {
   .grid-container-inicio {
-    background-image: url("/images/editedBG.png");
-    background-size: cover;
+    background-image: url("/images/editedBG1.png");
     background-position: 70% 80%;
-    grid-template-rows: 10vh 100vh;
+    grid-template-rows: 12vh 98vh;
   }
   .grid-container-inicio .main-inicio-first {
     height: 90vh;
@@ -542,14 +723,19 @@
     justify-content: end;
   }
   .grid-container-inicio .main-inicio-first__title--h1 {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     width: 25vw;
+    text-align: start;
   }
   .grid-container-inicio .main-inicio-first__title--description {
+    display: block;
     width: 35vw;
   }
   .grid-container-inicio .main-inicio-first__action {
     justify-content: start;
+  }
+  .grid-container-inicio .main-inicio-first__action p {
+    font-size: 1.3rem;
   }
   .grid-container-inicio .main-inicio-first__image {
     display: none;
@@ -612,16 +798,19 @@
     display: grid;
   }
   .grid-container-sign {
-    background-color: #ffffff;
+    background-color: #fff5f5;
     background-image: none;
+    background: linear-gradient(240deg, #e9f0ec, #d3794c);
   }
   .grid-container-sign .header-Sign {
-    background-color: rgba(252, 231, 231, 0.4);
     border-bottom: none;
+  }
+  .grid-container-sign .header-Sign__logo p {
+    color: #00008b;
   }
   .grid-container-sign .main-Sign {
     display: grid;
-    grid-template-columns: 55% 45%;
+    grid-template-columns: 50% 50%;
     height: 92vh;
   }
   .grid-container-sign .main-Sign__info {
@@ -634,8 +823,8 @@
 }
 @media only screen and (min-width: 1024px) {
   .grid-container-inicio {
-    background-position: 10% 100%;
-    grid-template-rows: 10vh 100vh;
+    background-position: 10% 92%;
+    grid-template-rows: 12vh 109vh;
   }
   .grid-container-inicio .header-inicio__ul {
     width: 17vw;
@@ -645,7 +834,7 @@
     font-size: 1.3rem;
   }
   .grid-container-inicio .main-inicio-first__title--h1 {
-    font-size: 3.8rem;
+    font-size: 3.2rem;
   }
   .grid-container-inicio .main-inicio-first__title--description {
     font-size: 1.3rem;
@@ -670,5 +859,11 @@
   }
   .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square p {
     font-size: 1.2rem;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .grid-container-inicio {
+    background-position: 10% 100%;
+    grid-template-rows: 12vh 109vh;
   }
 }/*# sourceMappingURL=style.css.map */
