--- a/styles/views/_signIn.scss
+++ b/styles/views/_signIn.scss
@@ -4,7 +4,7 @@
     background-position: 50% 50%;
     .header-Sign {
         height: 8vh;
-        border-bottom: #ffd2d2 solid 1px;
+        // border-bottom: #ffd2d2 solid 1px;
         nav{
             height: 100%;
             .header-Sign__logo{
@@ -23,10 +23,11 @@
         height: 92vh;
         &__info {
             display: none;
-            background-image: url("/images/mainMountain.jpg");
+            background-image: url("/images/mainMountain1.png");
             background-size: cover;
-            background-position: 50% 50%;
+            background-position: 50% 10%;
             height: 100%;
+            border-radius: 0 5px 0 0;
             .main-Sign__text {
                 margin: auto;
                 width: 75%;
@@ -45,6 +46,9 @@
                     h1{
                         font-size: 1.8rem;
                         color: #00008bd5;
+                        i{
+                            color: #00008b;
+                        }
                         strong{
                             font-size: 1.8rem;
                             color: #00008b;
@@ -52,6 +56,7 @@
                     }
                     p{
                         margin-bottom: 5vh;
+                        color: #00008b;
                     }
                 }
             }
@@ -66,35 +71,59 @@
                 margin: auto;
                 width: 75vw;
                 height: 75vh;
-                /* background-color: ; */
                 display: flex;
                 flex-direction: column;
-                padding: 8vh 4vw 4vh 2vw;
+                padding: 4vh 4vw 4vh 2vw;
+                &--h2{
+                    color: #00008b;
+                }
                 &--description {
+                    color: #00008b;
                     margin: 2vh 0;
                     font-size: 0.85em;
                 }
-                .main-Sign__label {margin: 1vh 0.5vw;}
+                .main-Sign__label {margin: 1vh 0vw; color: #00008b;}
                 .main-Sign__input {
-                    border: 1px solid #ffd2d2;
-                    /* #87CEEB; */
+                    border: none;
+                    border-bottom: 2px solid #f6d794;
                     border-radius: 3px;
                     margin: 1vh 0;
                     padding: 1vh 0;
                     background-color: transparent;
+                    color: #00008b;
                     &:focus{
                         outline: none;
                     }
                     &:hover{
-                        background-color: #ffd2d223;
+                        background-color: #f6d79457;
                     }
                 }
+                .main-Sign--btn{
+                    width: 100%;
+                }
+                .main-Sign__password--container{
+                    border-bottom: 2px solid #f6d794;
+                    margin: 1vh 0;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    .main-Sign__input--password{
+                        border: none;
+                        margin: 0;
+                        width: 90%;
+                    }
+                    #show-password{
+                        color:#00008b;
+                    } 
+                }
+                
                 .main-Sign__help {
                     display: flex;
                     justify-content: space-between;
                     margin: 2vh 0.5vw;
                     p{
                         font-size: 0.7em;
+                        color: #00008b;
                     }
                 }
                 .main-Sign__divisor{
@@ -105,14 +134,18 @@
                     &-side{
                         width: 30%;
                         hr{
-                            background-color: #ffd2d2;
+                            background-color: #f6d794;
                             border: none;
-                            height: 1px;
+                            height: 2px;
                         }
+                    }
+                    p{
+                        color: #00008b;
                     }
                 }
                 .main-Sign__create-account {
                     margin: auto;
+                    color: #00008b;
                     &:hover{
                         color: #00008bd5 ;
                     }
@@ -124,6 +157,7 @@
                     margin: 1vh 0;
                     i {
                         width: 1vw;
+                        color: #00008b;
                     }
                 }
             }
